<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/arrow"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="227dp"
        android:layout_height="73dp"
        android:layout_marginEnd="134dp"
        android:text="@string/daftar_"
        android:textAlignment="center"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="329dp"
        android:layout_height="66dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="41dp"
        android:text="@string/daftar_union"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="227dp"
        android:layout_height="73dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="10dp"
        android:text="@string/daftar_dengan"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nama_depan"
        android:textColor="#C5BBBB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="369dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tbldaftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/konfirmasi_password"
        android:textColor="#C5BBBB"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/password"
        android:textColor="#C5BBBB"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#C5BBBB"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nama_belakang"
        android:textColor="#C5BBBB"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName1"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/tbldaftar"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:background="#F5497D"
        android:text="@string/daftar_"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>